# yolov8_3d_ros

./: CMakeLists.txt  README.md  package.xml
config/: camera_info.yaml  detector_params.yaml
include/yolov8_3d/: detector_node.h  yolov8_detector.h
launch/: detector_2d.launch  detector_3d.launch
msg/: DetectedObject.msg  DetectedObjectArray.msg
scripts/: detector_3d_node.py  detector_node.py  yolov8_3d_detector.py
scripts/utils/: test_model.py  visualization.py
